--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       rel="stylesheet"
     />
     <title>Frontend Mentor | Advice generator app</title>
-    <script type="module" crossorigin src="/assets/index.c3937f58.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.a6447252.js">
-    <link rel="stylesheet" href="/assets/index.07206253.css">
+    <script type="module" crossorigin src="/advice-generator/assets/index.c3937f58.js"></script>
+    <link rel="modulepreload" href="/advice-generator/assets/vendor.a6447252.js">
+    <link rel="stylesheet" href="/advice-generator/assets/index.07206253.css">
   </head>
   <body>
     <div id="root"></div>
